@@ -25,6 +25,7 @@ import org.apache.nifi.action.component.details.FlowChangeExtensionDetails;
 import org.apache.nifi.action.details.FlowChangeConfigureDetails;
 import org.apache.nifi.admin.service.AuditService;
 import org.apache.nifi.authorization.AuthorizeControllerServiceReference;
+import org.apache.nifi.authorization.AuthorizeParameterReference;
 import org.apache.nifi.authorization.Authorizer;
 import org.apache.nifi.authorization.ComponentAuthorizable;
 import org.apache.nifi.authorization.RequestAction;
@@ -65,10 +66,11 @@ import jakarta.ws.rs.HttpMethod;
 import jakarta.ws.rs.core.MultivaluedHashMap;
 import jakarta.ws.rs.core.MultivaluedMap;
 import jakarta.ws.rs.core.Response;
-import java.io.UnsupportedEncodingException;
+
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
@@ -102,6 +104,10 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         });
     }
 
+    private Revision getRevision(final RevisionDTO revision, final String id) {
+        return new Revision(revision.getVersion(), revision.getClientId(), id);
+    }
+
     @Override
     public ControllerService getControllerService(final String serviceIdentifier, final String componentId) {
         final NiFiUser user = NiFiUserUtils.getNiFiUser();
@@ -118,53 +124,53 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
             throw new IllegalArgumentException("The UI extension type must be specified.");
         }
 
-        Component componentType = null;
-        switch (requestContext.getExtensionType()) {
-            case ProcessorConfiguration:
+        Component componentType = switch (requestContext.getExtensionType()) {
+            case ProcessorConfiguration -> {
                 // authorize access
                 serviceFacade.authorizeAccess(lookup -> {
                     final Authorizable authorizable = lookup.getProcessor(requestContext.getId()).getAuthorizable();
                     authorizable.authorize(authorizer, RequestAction.WRITE, NiFiUserUtils.getNiFiUser());
                 });
 
-                componentType = Component.Processor;
-                break;
-            case ControllerServiceConfiguration:
+                yield Component.Processor;
+            }
+            case ControllerServiceConfiguration -> {
                 // authorize access
                 serviceFacade.authorizeAccess(lookup -> {
                     final Authorizable authorizable = lookup.getControllerService(requestContext.getId()).getAuthorizable();
                     authorizable.authorize(authorizer, RequestAction.WRITE, NiFiUserUtils.getNiFiUser());
                 });
 
-                componentType = Component.ControllerService;
-                break;
-            case ReportingTaskConfiguration:
+                yield Component.ControllerService;
+            }
+            case ReportingTaskConfiguration -> {
                 // authorize access
                 serviceFacade.authorizeAccess(lookup -> {
                     final Authorizable authorizable = lookup.getReportingTask(requestContext.getId()).getAuthorizable();
                     authorizable.authorize(authorizer, RequestAction.WRITE, NiFiUserUtils.getNiFiUser());
                 });
 
-                componentType = Component.ReportingTask;
-                break;
-            case ParameterProviderConfiguration:
+                yield Component.ReportingTask;
+            }
+            case ParameterProviderConfiguration -> {
                 // authorize access
                 serviceFacade.authorizeAccess(lookup -> {
                     final Authorizable authorizable = lookup.getParameterProvider(requestContext.getId()).getAuthorizable();
                     authorizable.authorize(authorizer, RequestAction.WRITE, NiFiUserUtils.getNiFiUser());
                 });
 
-                componentType = Component.ParameterProvider;
-                break;
-            case FlowRegistryClientConfiguration:
+                yield Component.ParameterProvider;
+            }
+            case FlowRegistryClientConfiguration -> {
                 // authorize access
                 serviceFacade.authorizeAccess(lookup -> {
                     final Authorizable authorizable = lookup.getFlowRegistryClient(requestContext.getId()).getAuthorizable();
                     authorizable.authorize(authorizer, RequestAction.WRITE, NiFiUserUtils.getNiFiUser());
                 });
-                componentType = Component.FlowRegistryClient;
-                break;
-        }
+                yield Component.FlowRegistryClient;
+            }
+            default -> null;
+        };
 
         if (componentType == null) {
             throw new IllegalArgumentException("UI extension type must support Processor, ControllerService, or ReportingTask configuration.");
@@ -226,23 +232,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         }
 
         // get the component facade for interacting directly with that type of object
-        ComponentFacade componentFacade = null;
-        switch (requestContext.getExtensionType()) {
-            case ProcessorConfiguration:
-                componentFacade = new ProcessorFacade();
-                break;
-            case ControllerServiceConfiguration:
-                componentFacade = new ControllerServiceFacade();
-                break;
-            case ReportingTaskConfiguration:
-                componentFacade = new ReportingTaskFacade();
-                break;
-            case ParameterProviderConfiguration:
-                componentFacade = new ParameterProviderFacade();
-                break;
-            case FlowRegistryClientConfiguration:
-                componentFacade = new FlowRegistryClientFacade();
-        }
+        ComponentFacade componentFacade = switch (requestContext.getExtensionType()) {
+            case ProcessorConfiguration -> new ProcessorFacade();
+            case ControllerServiceConfiguration -> new ControllerServiceFacade();
+            case ReportingTaskConfiguration -> new ReportingTaskFacade();
+            case ParameterProviderConfiguration -> new ParameterProviderFacade();
+            case FlowRegistryClientConfiguration -> new FlowRegistryClientFacade();
+            default -> null;
+        };
 
         if (componentFacade == null) {
             throw new IllegalArgumentException("UI extension type must support Processor, ControllerService, or ReportingTask configuration.");
@@ -267,18 +264,12 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         }
 
         // get the component facade for interacting directly with that type of object
-        ComponentFacade componentFacade = null;
-        switch (requestContext.getExtensionType()) {
-            case ProcessorConfiguration:
-                componentFacade = new ProcessorFacade();
-                break;
-            case ControllerServiceConfiguration:
-                componentFacade = new ControllerServiceFacade();
-                break;
-            case ReportingTaskConfiguration:
-                componentFacade = new ReportingTaskFacade();
-                break;
-        }
+        ComponentFacade componentFacade = switch (requestContext.getExtensionType()) {
+            case ProcessorConfiguration -> new ProcessorFacade();
+            case ControllerServiceConfiguration -> new ControllerServiceFacade();
+            case ReportingTaskConfiguration -> new ReportingTaskFacade();
+            default -> null;
+        };
 
         if (componentFacade == null) {
             throw new IllegalArgumentException("UI extension type must support Processor, ControllerService, or ReportingTask configuration.");
@@ -354,14 +345,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 authorizable.authorize(authorizer, RequestAction.READ, NiFiUserUtils.getNiFiUser());
             });
 
-            final ProcessorDTO processor;
+            ProcessorEntity entity;
             if (properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    final String path = "/nifi-api/processors/" + URLEncoder.encode(id, "UTF-8");
+                    final String path = "/nifi-api/processors/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -380,17 +371,16 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return processor
-                ProcessorEntity entity = (ProcessorEntity) nodeResponse.getUpdatedEntity();
+                entity = (ProcessorEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ProcessorEntity.class);
                 }
-                processor = entity.getComponent();
             } else {
-                processor = serviceFacade.getProcessor(id).getComponent();
+                entity = serviceFacade.getProcessor(id);
             }
 
             // return the processor info
-            return getComponentConfiguration(processor);
+            return getComponentConfiguration(entity);
         }
 
         @Override
@@ -407,16 +397,20 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
 
                 // authorize any referenced service
                 AuthorizeControllerServiceReference.authorizeControllerServiceReferences(properties, authorizable, authorizer, lookup);
+
+                // authorize any parameter references
+                AuthorizeParameterReference.authorizeParameterReferences(properties, authorizer, authorizable.getParameterContext(), user);
+                AuthorizeParameterReference.authorizeParameterReferences(annotationData, authorizer, authorizable.getParameterContext(), user);
             });
 
-            final ProcessorDTO processor;
+            ProcessorEntity entity;
             if (StandardNiFiWebConfigurationContext.this.properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    final String path = "/nifi-api/processors/" + URLEncoder.encode(id, "UTF-8");
+                    final String path = "/nifi-api/processors/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -449,20 +443,18 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return processor
-                ProcessorEntity entity = (ProcessorEntity) nodeResponse.getUpdatedEntity();
+                entity = (ProcessorEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ProcessorEntity.class);
                 }
-                processor = entity.getComponent();
             } else {
                 // update processor within write lock
                 ProcessorDTO processorDTO = buildProcessorDto(id, annotationData, properties);
-                final ProcessorEntity entity = serviceFacade.updateProcessor(revision, processorDTO);
-                processor = entity.getComponent();
+                entity = serviceFacade.updateProcessor(revision, processorDTO);
             }
 
             // return the processor info
-            return getComponentConfiguration(processor);
+            return getComponentConfiguration(entity);
         }
 
         private ProcessorDTO buildProcessorDto(String id, final String annotationData, Map<String, String> properties) {
@@ -473,13 +465,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
             configDto.setAnnotationData(annotationData);
             configDto.setProperties(properties);
             return  processorDto;
-
         }
 
-        private ComponentDetails getComponentConfiguration(final ProcessorDTO processor) {
+        private ComponentDetails getComponentConfiguration(final ProcessorEntity entity) {
+            final ProcessorDTO processor = entity.getComponent();
             final ProcessorConfigDTO processorConfig = processor.getConfig();
             return new ComponentDetails.Builder()
                     .id(processor.getId())
+                    .revision(getRevision(entity.getRevision(), entity.getId()))
                     .name(processor.getName())
                     .type(processor.getType())
                     .state(processor.getState())
@@ -530,7 +523,6 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         @Override
         public ComponentDetails getComponentDetails(final NiFiWebRequestContext requestContext) {
             final String id = requestContext.getId();
-            final ControllerServiceDTO controllerService;
 
             // authorize access
             serviceFacade.authorizeAccess(lookup -> {
@@ -538,13 +530,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 authorizable.authorize(authorizer, RequestAction.READ, NiFiUserUtils.getNiFiUser());
             });
 
+            ControllerServiceEntity entity;
             if (properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/controller-services/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/controller-services/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -563,17 +556,16 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return controller service
-                ControllerServiceEntity entity = (ControllerServiceEntity) nodeResponse.getUpdatedEntity();
+                entity = (ControllerServiceEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ControllerServiceEntity.class);
                 }
-                controllerService = entity.getComponent();
             } else {
-                controllerService = serviceFacade.getControllerService(id, true).getComponent();
+                entity = serviceFacade.getControllerService(id, true);
             }
 
             // return the controller service info
-            return getComponentConfiguration(controllerService);
+            return getComponentConfiguration(entity);
         }
 
         @Override
@@ -590,16 +582,20 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
 
                 // authorize any referenced service
                 AuthorizeControllerServiceReference.authorizeControllerServiceReferences(properties, authorizable, authorizer, lookup);
+
+                // authorize any parameter references
+                AuthorizeParameterReference.authorizeParameterReferences(properties, authorizer, authorizable.getParameterContext(), user);
+                AuthorizeParameterReference.authorizeParameterReferences(annotationData, authorizer, authorizable.getParameterContext(), user);
             });
 
-            final ControllerServiceDTO controllerService;
+            ControllerServiceEntity entity;
             if (StandardNiFiWebConfigurationContext.this.properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/controller-services/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/controller-services/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -635,11 +631,10 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return controller service
-                ControllerServiceEntity entity = (ControllerServiceEntity) nodeResponse.getUpdatedEntity();
+                entity = (ControllerServiceEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ControllerServiceEntity.class);
                 }
-                controllerService = entity.getComponent();
             } else {
                 final ControllerServiceDTO controllerServiceDto = new ControllerServiceDTO();
                 controllerServiceDto.setId(id);
@@ -647,17 +642,18 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 controllerServiceDto.setProperties(properties);
 
                 // update controller service
-                final ControllerServiceEntity entity = serviceFacade.updateControllerService(revision, controllerServiceDto);
-                controllerService = entity.getComponent();
+                entity = serviceFacade.updateControllerService(revision, controllerServiceDto);
             }
 
             // return the controller service info
-            return getComponentConfiguration(controllerService);
+            return getComponentConfiguration(entity);
         }
 
-        private ComponentDetails getComponentConfiguration(final ControllerServiceDTO controllerService) {
+        private ComponentDetails getComponentConfiguration(final ControllerServiceEntity entity) {
+            final ControllerServiceDTO controllerService = entity.getComponent();
             return new ComponentDetails.Builder()
                     .id(controllerService.getId())
+                    .revision(getRevision(entity.getRevision(), entity.getId()))
                     .name(controllerService.getName())
                     .type(controllerService.getType())
                     .state(controllerService.getState())
@@ -675,7 +671,6 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         @Override
         public ComponentDetails getComponentDetails(final NiFiWebRequestContext requestContext) {
             final String id = requestContext.getId();
-            final ReportingTaskDTO reportingTask;
 
             // authorize access
             serviceFacade.authorizeAccess(lookup -> {
@@ -683,13 +678,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 authorizable.authorize(authorizer, RequestAction.READ, NiFiUserUtils.getNiFiUser());
             });
 
+            ReportingTaskEntity entity;
             if (properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/reporting-tasks/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/reporting-tasks/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -708,17 +704,16 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return reporting task
-                ReportingTaskEntity entity = (ReportingTaskEntity) nodeResponse.getUpdatedEntity();
+                entity = (ReportingTaskEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ReportingTaskEntity.class);
                 }
-                reportingTask = entity.getComponent();
             } else {
-                reportingTask = serviceFacade.getReportingTask(id).getComponent();
+                entity = serviceFacade.getReportingTask(id);
             }
 
             // return the reporting task info
-            return getComponentConfiguration(reportingTask);
+            return getComponentConfiguration(entity);
         }
 
         @Override
@@ -737,14 +732,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 AuthorizeControllerServiceReference.authorizeControllerServiceReferences(properties, authorizable, authorizer, lookup);
             });
 
-            final ReportingTaskDTO reportingTask;
+            ReportingTaskEntity entity;
             if (StandardNiFiWebConfigurationContext.this.properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/reporting-tasks/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/reporting-tasks/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -780,11 +775,10 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return reporting task
-                ReportingTaskEntity entity = (ReportingTaskEntity) nodeResponse.getUpdatedEntity();
+                entity = (ReportingTaskEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ReportingTaskEntity.class);
                 }
-                reportingTask = entity.getComponent();
             } else {
                 final ReportingTaskDTO reportingTaskDto = new ReportingTaskDTO();
                 reportingTaskDto.setId(id);
@@ -793,17 +787,18 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
 
                 // obtain write lock
                 serviceFacade.verifyRevision(revision, user);
-                final ReportingTaskEntity entity = serviceFacade.updateReportingTask(revision, reportingTaskDto);
-                reportingTask = entity.getComponent();
+                entity = serviceFacade.updateReportingTask(revision, reportingTaskDto);
             }
 
             // return the processor info
-            return getComponentConfiguration(reportingTask);
+            return getComponentConfiguration(entity);
         }
 
-        private ComponentDetails getComponentConfiguration(final ReportingTaskDTO reportingTask) {
+        private ComponentDetails getComponentConfiguration(final ReportingTaskEntity entity) {
+            final ReportingTaskDTO reportingTask = entity.getComponent();
             return new ComponentDetails.Builder()
                     .id(reportingTask.getId())
+                    .revision(getRevision(entity.getRevision(), entity.getId()))
                     .name(reportingTask.getName())
                     .type(reportingTask.getType())
                     .state(reportingTask.getState())
@@ -821,7 +816,6 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         @Override
         public ComponentDetails getComponentDetails(final NiFiWebRequestContext requestContext) {
             final String id = requestContext.getId();
-            final ParameterProviderDTO parameterProvider;
 
             // authorize access
             serviceFacade.authorizeAccess(lookup -> {
@@ -829,13 +823,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 authorizable.authorize(authorizer, RequestAction.READ, NiFiUserUtils.getNiFiUser());
             });
 
+            ParameterProviderEntity entity;
             if (properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/parameter-providers/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/parameter-providers/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -854,17 +849,16 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return parameter provider
-                ParameterProviderEntity entity = (ParameterProviderEntity) nodeResponse.getUpdatedEntity();
+                entity = (ParameterProviderEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ParameterProviderEntity.class);
                 }
-                parameterProvider = entity.getComponent();
             } else {
-                parameterProvider = serviceFacade.getParameterProvider(id).getComponent();
+                entity = serviceFacade.getParameterProvider(id);
             }
 
             // return the parameter provider info
-            return getComponentConfiguration(parameterProvider);
+            return getComponentConfiguration(entity);
         }
 
         @Override
@@ -883,14 +877,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 AuthorizeControllerServiceReference.authorizeControllerServiceReferences(properties, authorizable, authorizer, lookup);
             });
 
-            final ParameterProviderDTO parameterProvider;
+            ParameterProviderEntity entity;
             if (StandardNiFiWebConfigurationContext.this.properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/parameter-providers/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/parameter-providers/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -926,11 +920,10 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return parameter provider
-                ParameterProviderEntity entity = (ParameterProviderEntity) nodeResponse.getUpdatedEntity();
+                entity = (ParameterProviderEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(ParameterProviderEntity.class);
                 }
-                parameterProvider = entity.getComponent();
             } else {
                 final ParameterProviderDTO parameterProviderDto = new ParameterProviderDTO();
                 parameterProviderDto.setId(id);
@@ -939,17 +932,18 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
 
                 // obtain write lock
                 serviceFacade.verifyRevision(revision, user);
-                final ParameterProviderEntity entity = serviceFacade.updateParameterProvider(revision, parameterProviderDto);
-                parameterProvider = entity.getComponent();
+                entity = serviceFacade.updateParameterProvider(revision, parameterProviderDto);
             }
 
             // return the processor info
-            return getComponentConfiguration(parameterProvider);
+            return getComponentConfiguration(entity);
         }
 
-        private ComponentDetails getComponentConfiguration(final ParameterProviderDTO parameterProvider) {
+        private ComponentDetails getComponentConfiguration(final ParameterProviderEntity entity) {
+            final ParameterProviderDTO parameterProvider = entity.getComponent();
             return new ComponentDetails.Builder()
                     .id(parameterProvider.getId())
+                    .revision(getRevision(entity.getRevision(), entity.getId()))
                     .name(parameterProvider.getName())
                     .type(parameterProvider.getType())
                     .annotationData(parameterProvider.getAnnotationData())
@@ -966,7 +960,6 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
         @Override
         public ComponentDetails getComponentDetails(final NiFiWebRequestContext requestContext) {
             final String id = requestContext.getId();
-            final FlowRegistryClientDTO flowRegistryClient;
 
             // authorize access
             serviceFacade.authorizeAccess(lookup -> {
@@ -974,13 +967,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 authorizable.authorize(authorizer, RequestAction.READ, NiFiUserUtils.getNiFiUser());
             });
 
+            FlowRegistryClientEntity entity;
             if (properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/controller/registry-clients/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/controller/registry-clients/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -999,17 +993,16 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return flow registry client
-                FlowRegistryClientEntity entity = (FlowRegistryClientEntity) nodeResponse.getUpdatedEntity();
+                entity = (FlowRegistryClientEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(FlowRegistryClientEntity.class);
                 }
-                flowRegistryClient = entity.getComponent();
             } else {
-                flowRegistryClient = serviceFacade.getRegistryClient(id).getComponent();
+                entity = serviceFacade.getRegistryClient(id);
             }
 
             // return the flow registry client info
-            return getComponentConfiguration(flowRegistryClient);
+            return getComponentConfiguration(entity);
         }
 
         @Override
@@ -1028,14 +1021,14 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 AuthorizeControllerServiceReference.authorizeControllerServiceReferences(properties, authorizable, authorizer, lookup);
             });
 
-            final FlowRegistryClientDTO flowRegistryClient;
+            FlowRegistryClientEntity entity;
             if (StandardNiFiWebConfigurationContext.this.properties.isClustered() && clusterCoordinator != null && clusterCoordinator.isConnected()) {
                 // create the request URL
                 URI requestUrl;
                 try {
-                    String path = "/nifi-api/controller/registry-clients/" + URLEncoder.encode(id, "UTF-8");
+                    String path = "/nifi-api/controller/registry-clients/" + URLEncoder.encode(id, StandardCharsets.UTF_8);
                     requestUrl = new URI(requestContext.getScheme(), null, "localhost", 0, path, null, null);
-                } catch (final URISyntaxException | UnsupportedEncodingException use) {
+                } catch (final URISyntaxException use) {
                     throw new ClusterRequestException(use);
                 }
 
@@ -1071,11 +1064,10 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
                 checkResponse(nodeResponse, id);
 
                 // return flow registry client
-                FlowRegistryClientEntity entity = (FlowRegistryClientEntity) nodeResponse.getUpdatedEntity();
+                entity = (FlowRegistryClientEntity) nodeResponse.getUpdatedEntity();
                 if (entity == null) {
                     entity = nodeResponse.getClientResponse().readEntity(FlowRegistryClientEntity.class);
                 }
-                flowRegistryClient = entity.getComponent();
             } else {
                 final FlowRegistryClientDTO flowRegistryClientDTO = new FlowRegistryClientDTO();
                 flowRegistryClientDTO.setId(id);
@@ -1084,17 +1076,18 @@ public class StandardNiFiWebConfigurationContext implements NiFiWebConfiguration
 
                 // obtain write lock
                 serviceFacade.verifyRevision(revision, user);
-                final FlowRegistryClientEntity entity = serviceFacade.updateRegistryClient(revision, flowRegistryClientDTO);
-                flowRegistryClient = entity.getComponent();
+                entity = serviceFacade.updateRegistryClient(revision, flowRegistryClientDTO);
             }
 
             // return the processor info
-            return getComponentConfiguration(flowRegistryClient);
+            return getComponentConfiguration(entity);
         }
 
-        private ComponentDetails getComponentConfiguration(final FlowRegistryClientDTO parameterProvider) {
+        private ComponentDetails getComponentConfiguration(final FlowRegistryClientEntity entity) {
+            final FlowRegistryClientDTO parameterProvider = entity.getComponent();
             return new ComponentDetails.Builder()
                     .id(parameterProvider.getId())
+                    .revision(getRevision(entity.getRevision(), entity.getId()))
                     .name(parameterProvider.getName())
                     .type(parameterProvider.getType())
                     .annotationData(parameterProvider.getAnnotationData())
